--- a/src/components/user_profile/UserProfile.css
+++ b/src/components/user_profile/UserProfile.css
@@ -41,3 +41,16 @@
   width: 100%;
   background-color: var(--color-input-bg);
 }
+
+@media only screen and (max-width: 1280px) {
+  .UserProfile-context-menu {
+    position: absolute;
+    width: 15rem;
+    top: -14rem;
+    left: -14rem;
+    background-color: var(--color-white);
+    border-radius: 5px;
+    box-shadow: 4px 4px 5px;
+    z-index: 10;
+  }
+}
