--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -80,6 +80,7 @@
 }
 
 .Profile-media-content {
+  height: 400px;
   overflow-y: auto;
 }
 
